--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -17,7 +17,7 @@
 
 ### 1.1 进程概念
 
-[可执行程序内存分配](可执行程序内存分配.md)
+[可执行程序内存分配](Linux/可执行程序内存分配.md)
 
 > 进程是程序的一次执行过程，程序是静态的，作为系统中的一种资源永远存在的。而进程是动态的，动态产生，变化和消亡的，拥有其自己的生命周期
 
