--- a/知识学习/数据结构与算法/刷题记录点.md
+++ b/知识学习/数据结构与算法/刷题记录点.md
@@ -1,6 +1,6 @@
 # 一、输入输出处理
 
-详见[stringstream 输入输出处理](stringstream输入输出处理.md)
+详见[stringstream 输入输出处理](../C&C++/stringstream输入输出处理.md)
 
 ### 1.1 cout 输出精度处理
 
