--- a/知识学习/数据结构与算法/排序算法/冒泡排序算法.md
+++ b/知识学习/数据结构与算法/排序算法/冒泡排序算法.md
@@ -40,7 +40,7 @@ for (int i = 0; i < n - 1; i++)
 ### 3.1 性能
 
 - 时间复杂度 $O(n^2)$ --> 自适应排序：算法能够根据输入数据的特定属性（如已经部分排序的程度）来调整其性能。具有自适应性的排序算法在处理部分已排序的数据时，会比在处理完全随机数据时表现出更高的效率。
-- 空间复杂度 $O(1)$ --> 原地排序(见[原地算法](原地算法.md))
+- 空间复杂度 $O(1)$ --> 原地排序(见[原地算法](../原地算法.md))
 - 稳定排序：冒泡排序过程中遇到相等元素不进行交换操作
 
 ### 3.2 算法优化
