--- a/知识学习/数据结构与算法/排序算法/希尔排序算法.md
+++ b/知识学习/数据结构与算法/排序算法/希尔排序算法.md
@@ -51,5 +51,5 @@ while (h >= 1)
 
 - 时间复杂度试验统计为 $O(n^{1.25})\sim O(1.6*n^{1.25})$ --> 自适应排序
 - 空间复杂度 $O(1)$
-- 原地排序(见[原地算法](原地算法.md))
+- 原地排序(见[原地算法](../原地算法.md))
 - 非稳定排序：希尔排序过程中不相邻相等元素的相对顺序可能会发生改变
