--- a/知识学习/数据结构与算法/排序算法/快速排序算法.md
+++ b/知识学习/数据结构与算法/排序算法/快速排序算法.md
@@ -111,7 +111,7 @@ int main()
 
 - 时间复杂度始终为 $O(n*logn)$ --> 自适应排序
 - 空间复杂度 $O(n)$ ：待排序序列完全倒序时需要递归 n 层，使用$O(n)$栈帧空间
-- 原地排序(见[原地算法](原地算法.md))
+- 原地排序(见[原地算法](../原地算法.md))
 - 非稳定排序：哨兵划分交换基准数时可能被交换至相等元素右侧
 
 ### 3.2 算法优化
