--- a/知识学习/数据结构与算法/排序算法/插入排序算法.md
+++ b/知识学习/数据结构与算法/排序算法/插入排序算法.md
@@ -44,7 +44,7 @@ for (int i = 1; i < n; i++)
 
 - 时间复杂度为 $O(n^2)$ --> 自适应排序 -> 待排序序列完全有序时，时间复杂度最佳为$O(n)$
 - 空间复杂度 $O(1)$ ：指针 i 和 j 使用常数大小的额外空间
-- 原地排序(见[原地算法](原地算法.md))
+- 原地排序(见[原地算法](../原地算法.md))
 - 稳定排序：插入过程中将元素插入相等元素右边，不改变它们的相对位置
 
 ### 3.2 算法优势
