--- a/知识学习/数据结构与算法/排序算法/选择排序算法.md
+++ b/知识学习/数据结构与算法/排序算法/选择排序算法.md
@@ -46,7 +46,7 @@ for (int i = 0; i < n - 1; i++)
 
 - 时间复杂度始终为 $O(n^2)$ --> 非自适应排序
 - 空间复杂度 $O(1)$ ：指针 i 和 j 使用常数大小的额外空间
-- 原地排序(见[原地算法](原地算法.md))
+- 原地排序(见[原地算法](../原地算法.md))
 - 非稳定排序：选择排序过程中相等元素的相对顺序可能会发生改变(例如：5 7 5 10 2 9)
 
 ### 3.2 算法优化
