--- a/笔面试总结/2024.8.11 大疆笔试.md
+++ b/笔面试总结/2024.8.11 大疆笔试.md
@@ -2,7 +2,7 @@
 
 ### 1.1 C 语言变量类型自动转换
 
-详见[1.2 隐式转换](类型转换.md#1.2%20隐式转换)
+详见[1.2 隐式转换](../知识学习/C&C++/类型转换.md#1.2%20隐式转换)
 
 函数内定义的变量类型不同，编译器根据变量类型进行数据地址对齐时不会进行数据类型隐式转换，地址对齐更多是为了提高计算效率而采用的
 
@@ -20,7 +20,7 @@
 
 为了解决这个问题，Linux 将**中断处理程序**分解为两个半部：**上半部（top half）和下半部（bottom half）**。上半部完成**尽可能少的**比较紧急的功能，下半部就由**tasklet 或者工作队列**的方法实现
 
-详见[4.1 锁机制](进程与线程.md#4.1%20锁机制)
+详见[4.1 锁机制](../知识学习/操作系统/进程与线程.md#4.1%20锁机制)
 
 - `spin_lock(&lock)`：自旋锁，当资源被其他加锁时，自旋锁会一直占用 CPU 检查该资源是否被释放，不会进入睡眠状态
 - `write_lock(&rwlock)`：可以采用自旋锁实现读写锁
@@ -43,7 +43,7 @@
 
 ### 1.6 Git 中，用于撤销之前的提交并保留更改的命令是`git revert`
 
-见[二、git reset/revert](git%20命令.md#二、git%20reset/revert)
+见[二、git reset/revert](../知识学习/软件应用/git%20命令.md#二、git%20reset/revert)
 
 ### 1.7 组相联映象、 LRU 替换的 Cache 存储器，不影响 Cache 命中率的是增加主存容量
 
@@ -140,7 +140,7 @@ int main()
 
 ### 3.2 I2C 和 UART
 
-见[嵌入式 I2C、SPI、UART 和 USB 通信协议](嵌入式I2C、SPI、UART和USB通信协议.md)
+见[嵌入式 I2C、SPI、UART 和 USB 通信协议](../知识学习/嵌入式/嵌入式I2C、SPI、UART和USB通信协议.md)
 
 - 当 i2c 的 scI 线是高电平时，主设备会根据 sda 线状态进行总线仲裁
 - i2c 的 scI 线不可以被从设备控制，由主设备控制
