--- a/笔面试总结/师兄师姐面试经验贴/2021年秋招之路嵌入式面试总结.md
+++ b/笔面试总结/师兄师姐面试经验贴/2021年秋招之路嵌入式面试总结.md
@@ -5,7 +5,7 @@
 
 ### 1.1 手写冒泡排序和快速排序算法
 
-详见[冒泡排序算法](冒泡排序算法.md)和[快速排序算法](快速排序算法.md)
+详见[冒泡排序算法](../../知识学习/数据结构与算法/排序算法/冒泡排序算法.md)和[快速排序算法](../../知识学习/数据结构与算法/排序算法/快速排序算法.md)
 
 ### 1.2 FreeRTOS、操作系统相关知识点
 
