--- a/笔面试总结/笔试整理.md
+++ b/笔面试总结/笔试整理.md
@@ -44,14 +44,14 @@
 
 ### 1.指针数组和数组指针
 
-见[指针与引用](指针与引用.md)
+见[指针与引用](../知识学习/C&C++/指针与引用.md)
 
 - 指针数组：指针的数组(元素为指针)
 - 数组指针：数组的指针(指向数组的指针)
 
 ### 2.C/C++运算符优先级
 
-见[C++运算符优先级](C++运算符优先级.md)
+见[C++运算符优先级](../知识学习/C&C++/C++运算符优先级.md)
 
 ### 3.查看文件可以光标上下移动
 
@@ -742,7 +742,7 @@ RISC 指令长度固定，指令种类少，寻址方式少
 
 ### 7.若一棵二叉树有 102 片叶子结点，则度二叉树度为 2 的结点数是 101
 
-见[四、树](刷题记录点.md#四、树)
+见[四、树](../知识学习/数据结构与算法/刷题记录点.md#四、树)
 
 ### 8.抓包工具：Burpsuite/Vireshark/Fiddler
 
