--- a/笔面试总结/面试总结/2024.8.14 韶音科技面试 二面.md
+++ b/笔面试总结/面试总结/2024.8.14 韶音科技面试 二面.md
@@ -4,7 +4,7 @@
 
 # 三、网络分层架构及各层解释
 
-详见[TCP 与 UDP](TCP与UDP.md)
+详见[TCP 与 UDP](../../知识学习/计算机网络/TCP与UDP.md)
 
 > 五层网络协议栈：应用层->运输层->网络层->链路层->物理层
 
@@ -62,8 +62,8 @@
 # 五、Linux 线程通信方式及二值信号量
 
 详见：
-[进程与线程](进程与线程.md)
-[2.3 线程同步和互斥](进程与线程.md#2.3%20线程同步和互斥)
+[进程与线程](../../知识学习/操作系统/进程与线程.md)
+[2.3 线程同步和互斥](../../知识学习/操作系统/进程与线程.md#2.3%20线程同步和互斥)
 
 Linux 线程通信方式主要有：
 
@@ -75,13 +75,13 @@ Linux 线程通信方式主要有：
 
 # 六、编译过程
 
-详见[编译与链接](编译与链接.md)
+详见[编译与链接](../../知识学习/操作系统/编译与链接.md)
 
 预处理->编译->汇编->链接
 
 # 七、内联函数
 
-详见[五、inline 内联函数](C&C++基础知识总结.md#五、inline%20内联函数)
+详见[五、inline 内联函数](../../知识学习/C&C++/C&C++基础知识总结.md#五、inline%20内联函数)
 
 # 八、有了解过蓝牙、WiFi 吗
 
