--- a/笔面试总结/面试总结/2024.8.16 腾讯面试 一面.md
+++ b/笔面试总结/面试总结/2024.8.16 腾讯面试 一面.md
@@ -122,7 +122,7 @@ int main()
 
 # 四、struct 和 class 区别
 
-详见[struct 和 class](struct和class.md)
+详见[struct 和 class](../../知识学习/C&C++/struct和class.md)
 
 # 五、sizeof 结构体内存对齐
 
@@ -130,7 +130,7 @@ int main()
 
 # 六、引用和指针区别
 
-详见[指针与引用](指针与引用.md)
+详见[指针与引用](../../知识学习/C&C++/指针与引用.md)
 
 # 七、C++新特性
 
@@ -179,7 +179,7 @@ int main()
 
 [面试题：C++vector 的动态扩容，为何是 1.5 倍或者是 2 倍-CSDN 博客](https://blog.csdn.net/qq_44918090/article/details/120583540)
 [c++STL 中的 vector 的实现，是怎么扩容的？|野牛程序员](https://yncoders.com/show/2786)
-[1.2 vector 内存分配原理](STL库之vector、list和deque.md#1.2%20vector%20内存分配原理)
+[1.2 vector 内存分配原理](../../知识学习/STL标准库/STL库之vector、list和deque.md#1.2%20vector%20内存分配原理)
 
 1. 当  `vector`  容器的元素个数超过了当前容量时，`vector`  将分配一个更大的内存空间。
 2. `vector`  会选择一个新的容量，通常是当前容量的两倍，来保证有足够的空间添加更多的元素。
