--- a/笔面试总结/面试总结/2024.8.2 视源股份(CVTE) 二面.md
+++ b/笔面试总结/面试总结/2024.8.2 视源股份(CVTE) 二面.md
@@ -61,11 +61,11 @@
 
 # 6.线程和进程区别
 
-见[进程与线程](进程与线程.md)
+见[进程与线程](../../知识学习/操作系统/进程与线程.md)
 
 # 7.线程/进程间通信方式
 
-见[三、进程间通信方式及其优缺点](进程与线程.md#三、进程间通信方式及其优缺点)
+见[三、进程间通信方式及其优缺点](../../知识学习/操作系统/进程与线程.md#三、进程间通信方式及其优缺点)
 
 # 8.用到过什么数据结构
 
@@ -158,11 +158,11 @@ int main()
 
 # 12.C++重写与重载的区别
 
-见[1.3 重载、重写(覆盖)与隐藏](<C++%20多态机制.md#1.3%20重载、重写(覆盖)与隐藏>)
+见[1.3 重载、重写(覆盖)与隐藏](<../../知识学习/C&C++/C++%20多态机制.md#1.3%20重载、重写(覆盖)与隐藏>)
 
 # 13.C++纯虚函数
 
-见[2.2.10 纯虚函数](<嵌入式面经题全解析(软件开发C++面经).md#2.2.10%20纯虚函数>)
+见[2.2.10 纯虚函数](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#2.2.10%20纯虚函数>)
 
 # 14.是否熟悉常见 Linux 系统命令，是否会进行 UI 界面设计
 
