--- a/笔面试总结/面试总结/奥卡思微电面试.md
+++ b/笔面试总结/面试总结/奥卡思微电面试.md
@@ -12,21 +12,21 @@
 
 ### 2.C++引用和指针区别
 
-将[指针与引用](指针与引用.md)
+将[指针与引用](../../知识学习/C&C++/指针与引用.md)
 
 ### 3.项目中用过 const、指针、virtual 虚函数和多态机制吗
 
 见：
-[2.1.14 const 常量与 define 的区别(编译阶段、安全性、内存占用等)](<嵌入式面经题全解析(软件开发C++面经).md#2.1.14%20const%20常量与%20define%20的区别(编译阶段、安全性、内存占用等)>)
-[2.2 封装、继承与多态](<嵌入式面经题全解析(软件开发C++面经).md#2.2%20封装、继承与多态>)
+[2.1.14 const 常量与 define 的区别(编译阶段、安全性、内存占用等)](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#2.1.14%20const%20常量与%20define%20的区别(编译阶段、安全性、内存占用等)>)
+[2.2 封装、继承与多态](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#2.2%20封装、继承与多态>)
 
 ### 4.进程间通信方式
 
-见[进程与线程](进程与线程.md)
+见[进程与线程](../../知识学习/操作系统/进程与线程.md)
 
 ### 5.项目中使用了 C++的哪些 STL 模板库及其各自特点和使用场景
 
-见[STL 库之 vector、list 和 deque](STL库之vector、list和deque.md)
+见[STL 库之 vector、list 和 deque](../../知识学习/STL标准库/STL库之vector、list和deque.md)
 
 ### 6.verilog 的阻塞赋值与非阻塞赋值
 
