--- a/笔面试总结/面试总结/拼多多面试.md
+++ b/笔面试总结/面试总结/拼多多面试.md
@@ -10,8 +10,8 @@
 
 ### 三、C++多态理解
 
-详见[C++ 多态机制](C++%20多态机制.md)
-[1.1.3 非继承下的对象模型](类对象内存布局.md#1.1.3%20非继承下的对象模型)
+详见[C++ 多态机制](../../知识学习/C&C++/C++%20多态机制.md)
+[1.1.3 非继承下的对象模型](../../知识学习/C&C++/类对象内存布局.md#1.1.3%20非继承下的对象模型)
 
 C++类中指向虚函数表的虚函数表指针位置：类对象最前面
 
