--- a/笔面试总结/面试总结/相关面试.md
+++ b/笔面试总结/面试总结/相关面试.md
@@ -6,19 +6,19 @@
 
 ### 3.TCP 和 UDP 的区别
 
-见[TCP 与 UDP](TCP与UDP.md)
+见[TCP 与 UDP](../../知识学习/计算机网络/TCP与UDP.md)
 
 ### 4.进程和线程区别
 
-见[进程与线程](进程与线程.md)
+见[进程与线程](../../知识学习/操作系统/进程与线程.md)
 
 ### MCU 通信协议了解哪些
 
-见[嵌入式 I2C、SPI、UART 和 USB 通信协议](嵌入式I2C、SPI、UART和USB通信协议.md)
+见[嵌入式 I2C、SPI、UART 和 USB 通信协议](../../知识学习/嵌入式/嵌入式I2C、SPI、UART和USB通信协议.md)
 
 ### 5.select 和 epoll 等知识点
 
-见[2.Linux 的 I/O 多路复用 select,poll,epoll](笔试整理.md#2.Linux%20的%20I/O%20多路复用%20select,poll,epoll)
+见[2.Linux 的 I/O 多路复用 select,poll,epoll](../笔试整理.md#2.Linux%20的%20I/O%20多路复用%20select,poll,epoll)
 
 # 2024.9.18 杰克科技
 
@@ -28,11 +28,11 @@
 
 ### 3.对于 C++的封装、继承和多态的理解
 
-见[2.2 封装、继承与多态](<嵌入式面经题全解析(软件开发C++面经).md#2.2%20封装、继承与多态>)
+见[2.2 封装、继承与多态](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#2.2%20封装、继承与多态>)
 
 ### 4.进程和线程通信方式
 
-见[一、进程与线程](<嵌入式面经题全解析(软件开发C++面经).md#一、进程与线程>)
+见[一、进程与线程](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#一、进程与线程>)
 
 ### 5.QT 相关知识点提问
 
@@ -62,11 +62,11 @@
 
 ### 3.进程间通信方式
 
-见[进程与线程](进程与线程.md)
+见[进程与线程](../../知识学习/操作系统/进程与线程.md)
 
 ### 4.内核态与用户态区别
 
-见[Linux 系统内核](Linux系统内核.md)
+见[Linux 系统内核](../../知识学习/操作系统/Linux/Linux系统内核.md)
 
 ### 5.DNS 解析过程
 
@@ -74,7 +74,7 @@
 
 ### 6.OSI 七层模型
 
-见[3.1.5 典型网络模型](<嵌入式面经题全解析(软件开发C++面经).md#3.1.5%20典型网络模型>)
+见[3.1.5 典型网络模型](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#3.1.5%20典型网络模型>)
 
 ### 7.应用层有哪些协议
 
@@ -86,7 +86,7 @@
 
 ### 9.手撕代码：快速排序
 
-见[快速排序算法](快速排序算法.md)
+见[快速排序算法](../../知识学习/数据结构与算法/排序算法/快速排序算法.md)
 
 # 2024.9.25 佰维存储 一面
 
