--- a/笔面试总结/面试总结/金证科技面试.md
+++ b/笔面试总结/面试总结/金证科技面试.md
@@ -11,7 +11,7 @@
 
 # 四、多线程间通信方式
 
-[二、线程](进程与线程.md#二、线程)
+[二、线程](../../知识学习/操作系统/进程与线程.md#二、线程)
 [C++ 并发编程指南（10）线程间通信-CSDN 博客](https://blog.csdn.net/cloud323/article/details/136620168)
 
 线程同步与线程通信区别(个人理解是线程同步与线程通信的方式或手段都差不多，但它们的目的不同)：
@@ -21,8 +21,8 @@
 
 # 五、STL 的 deque 和 queue 区别
 
-[STL 库之 vector、list 和 deque](STL库之vector、list和deque.md)
-[4.2.3 vector 和 deque 的比较](<嵌入式面经题全解析(软件开发C++面经).md#4.2.3%20vector%20和%20deque%20的比较>)
+[STL 库之 vector、list 和 deque](../../知识学习/STL标准库/STL库之vector、list和deque.md)
+[4.2.3 vector 和 deque 的比较](<../../知识学习/嵌入式面经题全解析(软件开发C++面经).md#4.2.3%20vector%20和%20deque%20的比较>)
 [C++中 Queue 和 Deque 的区别|极客笔记](https://deepinout.com/cpp/cpp-questions/g_difference-between-queue-and-deque-in-c.html)
 
 - **Queue**（队列）是一种先进先出（FIFO）的数据结构，类似于现实生活中排队等待的概念。在队列中，新元素被添加到队尾，而最早添加的元素则位于队头。
@@ -30,8 +30,8 @@
 
 # 六、什么是虚函数
 
-[二、多态原理](C++%20多态机制.md#二、多态原理)
-[1.2 动态多态](C++%20多态机制.md#1.2%20动态多态)
+[二、多态原理](../../知识学习/C&C++/C++%20多态机制.md#二、多态原理)
+[1.2 动态多态](../../知识学习/C&C++/C++%20多态机制.md#1.2%20动态多态)
 
 # 七、static 和 virtual 能同时修饰成员函数吗
 
