--- a/笔面试总结/面试总结/顺丰科技面试.md
+++ b/笔面试总结/面试总结/顺丰科技面试.md
@@ -24,11 +24,11 @@
 
 ### 六、多线程与多进程的区别
 
-见[进程与线程](进程与线程.md)
+见[进程与线程](../../知识学习/操作系统/进程与线程.md)
 
 ### 七、C++面向对象的特点
 
-见[二十、面向对象三大特征 —— 封装、继承、多态](C&C++基础知识总结.md#二十、面向对象三大特征%20——%20封装、继承、多态)
+见[二十、面向对象三大特征 —— 封装、继承、多态](../../知识学习/C&C++/C&C++基础知识总结.md#二十、面向对象三大特征%20——%20封装、继承、多态)
 
 ### 八、Linux 将一个文件写入另外一个文件的命令有哪些
 
