--- a/知识学习/数据结构与算法/排序算法/归并排序算法.md
+++ b/知识学习/数据结构与算法/排序算法/归并排序算法.md
@@ -98,7 +98,7 @@ int main()
 ### 3.1 性能
 
 - 时间复杂度为 $O(n*logn)$ ，非自适应排序
-- 空间复杂度 $O(n)$ -非原地排序(见[原地算法](原地算法.md))
+- 空间复杂度 $O(n)$ -非原地排序(见[原地算法](../原地算法.md))
 - 稳定排序：排序过程中相等元素的相对顺序保持不变
 
 ### 3.2 算法优化
