--- a/笔面试总结/2024.8.18 经纬恒润笔试.md
+++ b/笔面试总结/2024.8.18 经纬恒润笔试.md
@@ -1,14 +1,14 @@
 # 1. STL 中的 MAP 容器的搜索时间复杂度为$O(log_2n)$
 
-详见[4.2.7 map 实现方式、查找效率及其排序](<嵌入式面经题全解析(软件开发C++面经).md#4.2.7%20map%20实现方式、查找效率及其排序>)
+详见[4.2.7 map 实现方式、查找效率及其排序](<../知识学习/嵌入式面经题全解析(软件开发C++面经).md#4.2.7%20map%20实现方式、查找效率及其排序>)
 
 # 2.类的成员函数不包括友元函数
 
 # 3.自定义析构函数时，编译器会生成默认构造函数、拷贝构造函数、赋值运算符
 
 [当 C++定义类时，编译器会为类自动生成哪些函数？这些函数各自都有什么特点？-CSDN 博客](https://blog.csdn.net/weixin_42672977/article/details/90239305)
-[构造函数与析构函数](构造函数与析构函数.md)
-[十三、C++类中默认有哪四个函数](蔚来面试.md#十三、C++类中默认有哪四个函数)
+[构造函数与析构函数](../知识学习/C&C++/构造函数与析构函数.md)
+[十三、C++类中默认有哪四个函数](面试总结/蔚来面试.md#十三、C++类中默认有哪四个函数)
 
 对于一个空类，编译器会自动生成四个成员函数：
 
