doc(知识学习,资料收藏):整理和添加相关笔记
1.添加C&C++实现执行时间计时代码
2.在已有文档中添加参考链接和补充相关知识点
3.整理使用pycharm中遇到的问题,其他资料整理

--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -297,6 +297,8 @@ $ kill -9 <ppid>
 
 # 三、进程间通信方式及其优缺点
 
+[全网最全、最详细的 Linux 进程间通信方式讲解来了，你不容错过！](https://mp.weixin.qq.com/s/-HapLBJIrV6BULzpaqVw4w)
+
 ### 3.1 管道(PIPE)--> 半双工通信
 
 ##### 命名管道
@@ -342,12 +344,24 @@ $ kill -9 <ppid>
 
 ### 3.6 套接字(Socket)
 
+套接字可以分为网络套接字和域套接字 (Unix Domain Sockets)
+
+域套接字（Unix Domain Sockets）是一种在同一台机器上的进程间进行数据通信的机制。相对于网络套接字，它们提供了更高效的本地通信方式，**因为数据不需要经过网络协议栈**。域套接字支持流（类似 TCP）和数据报（类似 UDP）两种模式
+
+**特别说明**：在域套接字通信中，**“不经过网络协议栈”**  指的是数据传输不需要 IP 层的路由、不需要 TCP/UDP 等传输层协议的封包与解包处理，也不需要网络接口层的参与。这一点与网络套接字不同，后者用于跨网络的通信，需要经过完整的网络协议栈处理，包括数据的封装、传输、路由和解封装等
+
 - 优点
   - 传输数据为字节级，数据量小效率高
   - 传输数据时间短，性能高
   - 适合于客户端和服务器端之间信息的实时交互
   - 可以加密，数据安全性强
 - 缺点：需对传输的数据进行解析，转化成应用层的数据
+
+### 3.7 文件(Files)
+
+文件在 Linux 系统中是一种基本的持久化存储机制，可用于**进程间通信**。多个进程可以通过对同一个文件的读取和写入来共享信息
+
+如果存在多个写进程同时操作同一个文件，那么会引发数据竞态和一致性问题。为了解决这个问题，可以使用文件锁或其他同步机制来协调对文件的访问，确保数据的完整性和一致性
 
 # 四、线程间通信方式
 
