doc(知识学习,资料收藏,笔面试总结):添加,优化和删除相关笔记
1.git相关知识点整理
2.Linux系统相关知识点整理
3.收集相关优秀文章
4.其他

--- a/知识学习/C&C++/指针与引用.md
+++ b/知识学习/C&C++/指针与引用.md
@@ -1,6 +1,7 @@
 - [最详细的讲解 C++中指针的使用方法（通俗易懂）\_c++指针-CSDN 博客](https://blog.csdn.net/galaxyrt/article/details/117253022)
 - [【C++】为何引入“引用“? 指针和引用有何区别?-CSDN 博客](https://blog.csdn.net/LvzJason/article/details/122934509)
 - [C++之引用的详解\_c++引用-CSDN 博客](https://blog.csdn.net/xiao__tian__/article/details/51814617)
+- [指针是怎样一步步发明出来的？](https://mp.weixin.qq.com/s/wnHn3lX3mylAzJ-ChZUbpw)
 
 # 一、指针
 
