--- a/知识学习/操作系统/Linux/可执行程序内存分配.md
+++ b/知识学习/操作系统/Linux/可执行程序内存分配.md
@@ -1,4 +1,5 @@
 [C 语言关键字 static 的使用方法](https://mp.weixin.qq.com/s/_-WX6hAVh9N-8924mGDXZw)
+[操作系统中，逻辑地址和物理地址有什么区别？](https://mp.weixin.qq.com/s/RJ8F4D555j2bkdde71B8ag)
 
 # 一、可执行程序本身分段
 
@@ -36,8 +37,8 @@
 
 ### 2.2 堆区(heap)
 
-+ 程序员手动分配释放，若未手动释放则程序结束后**可能**由操作系统回收，分配方式类似于链表
-+ 堆区内存区域不连续(多次分配后存在内存碎片)
+- 程序员手动分配释放，若未手动释放则程序结束后**可能**由操作系统回收，分配方式类似于链表
+- 堆区内存区域不连续(多次分配后存在内存碎片)
 
 ### 2.3 全局静态存储区
 
