--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -12,6 +12,7 @@
 - 共享：堆，地址空间，全局变量，静态变量
 
 [五分钟扫盲：进程与线程基础必知 - 知乎](https://zhuanlan.zhihu.com/p/403313422)
+[Linux 原来这样完成了多任务切换](https://mp.weixin.qq.com/s/p9w8CDSABmUO-UV0oi9BIw)
 
 # 一、进程
 
@@ -172,6 +173,11 @@ C)  挂起的信号。这些信号是所谓的“悬而未决”的信号，等
 - 寄存器上下文：通用寄存器、程序寄存器(IP)、处理器状态寄存器(EFLAGS)、栈指针(ESP)
 - 系统级上下文：进程控制块 task_struct、内存管理信息(mm_struct、vm_area_struct、pgd、pte)、内核栈
 
+##### 1.6.4 进程上下文切换 VS 系统调用
+
+- 系统调用进程不会涉及进程切换，也不会涉及虚拟内存等系统资源切换，系统调用过程通常被称为**特权模式切换**，而不是**上下文切换**。但实际上，在系统调用过程中，CPU 的上下文切换也是不可避免的
+- 进程上下文切换比系统调用多一步：在保存当前进程的内核状态和 CPU 寄存器之前，需要保存进程的虚拟内存、栈等；并加载下一个进程的内核状态
+
 ### 1.7 孤儿进程、僵尸进程和守护进程
 
 - [孤儿进程与僵尸进程[总结]](https://www.cnblogs.com/Anker/p/3271773.html)
@@ -225,7 +231,8 @@ $ kill -9 <ppid>
 ### 中断上下文
 
 - **中断上下文(原子上下文)，就是硬件传递过来的这些参数和内核需要保存的一些其他环境（主要是当前被打断执行的进程环境）**
-- 中断上下文切换：在发生中断时,内核就在被中断进程的上下文中，在内核态下执行中断服务例程。但同时会保留所有需要用到的资源，以便中继服务结束时能恢复被中断进程的执行。
+- 中断上下文切换：在发生中断时,内核就在被中断进程的上下文中，在内核态下执行中断服务例程。但同时会保留所有需要用到的资源，以便中继服务结束时能恢复被中断进程的执行
+- 与进程上下文不同，中断上下文切换不涉及进程的用户态，因此即使中断进程中断了处于用户态的进程，也不需要保存和恢复进程的虚拟内存、全局变量等用户态资源
 
 # 二、线程
 
