--- a/笔面试总结/面试总结/2024.8.2 视源股份(CVTE) 二面.md
+++ b/笔面试总结/面试总结/2024.8.2 视源股份(CVTE) 二面.md
@@ -101,6 +101,7 @@
 # 11.C++智能指针及其分类
 
 [C++ 智能指针 - 全部用法详解-CSDN 博客](https://blog.csdn.net/cpp_learner/article/details/118912592)
+[一个合格 C++程序员，应该善用智能指针！](https://mp.weixin.qq.com/s/RDl3r3ZQvWqI9TOYSf470g)
 
 ### 11.1 智能指针作用
 
