--- a/资料收藏/优秀文章合集.md
+++ b/资料收藏/优秀文章合集.md
@@ -1,3 +1,7 @@
+# 编码
+
+[printf 打印输出时 \ n 和 \r 的区别](https://mp.weixin.qq.com/s/jJAwt3ivZ8DbfwEuFt7G0w)
+
 # C 语言相关
 
 [50 条 C 语言奇技淫巧，精品干货！](https://mp.weixin.qq.com/s/BMQfsrmVMBHg4lhApuwuVA)
@@ -14,3 +18,28 @@
 
 [Vim 编辑器三种模式](https://mp.weixin.qq.com/s/BZj2n_QRzcwlpM8K50B2tA)
 [如何优雅地使用 Vim？ - Lion Long 的回答 - 知乎](https://www.zhihu.com/question/20833248/answer/3130843749)
+
+# IC 相关
+
+[IC 设计学习路线 - 菜鸟芯片师 - 博客园](https://www.cnblogs.com/cutewei/p/15392922.html)
+[如何学习 FPGA-CSDN 博客](https://blog.csdn.net/k331922164/article/details/44626989)
+[微电子教学视频--Silicon Run 等](https://blog.csdn.net/k331922164/article/details/85047746)
+[AI 芯片 PPA 与 CoWoS 先进封装工艺](https://mp.weixin.qq.com/s/LnrSs-nTv3jf240WwZNuQg)
+
+# 计算机
+
+[计算机教育中缺失的一课 · the missing semester of your cs education](https://missing-semester-cn.github.io/)
+[浮点数精度问题全解析](https://mp.weixin.qq.com/s/H8riVioz1IA8e-zbyP2fxQ)
+
+# 计算机协议
+
+[一口气整清楚 TTL、RS232、RS422、RS485、CAN、USB、SD 卡、1-WIRE、Ethernet.....](https://mp.weixin.qq.com/s/nPGsJHBTK8EP4UjjlIjVnA)
+[电脑 USB、HDMI、DP 速度区别](https://mp.weixin.qq.com/s/MesDGomn_ywXNddn3DmoPw)
+
+# 其他
+
+[图灵完备(Turing complete)攻略 | Schwarz’s blog](https://www.schwarzblog.icu/article/e8701c6c-7562-4745-b7f9-04cc5882f915#1b02677e54614d68884085f9a4a6eae9)
+[Obsidian+Hugo：我的博客笔记工作流](https://zhuanlan.zhihu.com/p/4791867594?utm_psn=1837278146992406528)
+[语义化版本 2.0.0 | Semantic Versioning](https://semver.org/lang/zh-CN/)
+[探索互联网上高质量的内容 - Owen 的博客](https://www.owenyoung.com/sources/)
+[利用 Vercel 快速搭建 Nexior AI 平台](https://mp.weixin.qq.com/s/q53oMn3G63QIFh8KgEK6FQ)
