doc(知识学习):添加,优化和删除相关笔记
1.Linux系统相关笔记整理
2.frp内网穿透学习
3.其他

--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -44,7 +44,7 @@
 > 阻塞态是由于缺少需要的资源从而由运行态转换而来，但是该资源不包括 CPU 时间片，缺少 CPU 时间片会从运行态转换为就绪态
 >
 > 只有就绪态和运行态可以相互转换，其它的都是单向转换
-> 1.3.1~1.3.3 为三种基本状态；1.3.1~1.3.5 为五种基本状态
+> 1.3.1\~1.3.3 为三种基本状态；1.3.1\~1.3.5 为五种基本状态
 
 ```mermaid
 ---
