doc(知识学习,项目学习笔记,等等):添加,优化相关笔记
1.添加Linux的常用命令
2.优化项目学习笔记格式
3.其他修改

--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -153,6 +153,7 @@ C)  挂起的信号。这些信号是所谓的“悬而未决”的信号，等
 ### 1.6 进程上下文
 
 [Linux：上下文，进程上下文和中断上下文概念，上下文切换-CSDN 博客](https://blog.csdn.net/lqy971966/article/details/119103989)
+[到底什么是上下文切换？](https://mp.weixin.qq.com/s/Oh9jDTULSsRk0hNN_o5K4w)
 
 处理器总处于以下三种状态之一：  
 １、内核态，运行于进程上下文，内核代表进程运行于内核空间；  
@@ -177,6 +178,11 @@ C)  挂起的信号。这些信号是所谓的“悬而未决”的信号，等
 
 - 系统调用进程不会涉及进程切换，也不会涉及虚拟内存等系统资源切换，系统调用过程通常被称为**特权模式切换**，而不是**上下文切换**。但实际上，在系统调用过程中，CPU 的上下文切换也是不可避免的
 - 进程上下文切换比系统调用多一步：在保存当前进程的内核状态和 CPU 寄存器之前，需要保存进程的虚拟内存、栈等；并加载下一个进程的内核状态
+
+##### 1.6.5 上下文切换查看命令
+
+- vmstat：查看整个系统的上下文切换情况
+- pidstat：查看具体某个进程的上下文切换情况
 
 ### 1.7 孤儿进程、僵尸进程和守护进程
 
