--- a/竞赛项目/华为软挑相关.md
+++ b/竞赛项目/华为软挑相关.md
@@ -1,8 +1,8 @@
 # A\*算法相关资料
 
-[A\*寻路基本概念和C++实现A\*算法-CSDN博客](https://blog.csdn.net/qq_52855744/article/details/126268974)
+[A\*寻路基本概念和 C++实现 A\*算法-CSDN 博客](https://blog.csdn.net/qq_52855744/article/details/126268974)
 [A\*算法寻路（C++代码实现） - 世纪小小孟 - 博客园](https://www.cnblogs.com/xxmmqg/p/12843900.html)
 [A\*算法入门 - 极限定律 - C++博客](https://www.cppblog.com/mythit/archive/2009/04/19/80492.aspx)
-[# A* Pathfinding for Beginners](https://www.gamedev.net/reference/articles/article2003.asp)
+[# A\* Pathfinding for Beginners](https://www.gamedev.net/reference/articles/article2003.asp)
 [Introduction to the A\* Algorithm](https://www.redblobgames.com/pathfinding/a-star/introduction.html)
 [GitHub - zhm-real/PathPlanning: Common used path planning algorithms with animations.](https://github.com/zhm-real/PathPlanning?tab=readme-ov-file)
