--- a/项目学习笔记/类图.md
+++ b/项目学习笔记/类图.md
@@ -1,35 +1,53 @@
 > 类图(Class diagram)是显示了模型的静态结构，特别是模型中存在的类、类的内部结构以及它们与其他类的关系等。类图不显示暂时性的信息。类图是面向对象建模的主要组成部分。它既用于应用程序的系统分类的一般概念建模，也用于详细建模，将模型转换成编程代码。类图也可用于数据建模。
 
 类图详细说明：
-+ 类（Class）一般包含3个组成部分。第一个是类名；第二个是属性（attributes）；第三个是该类提供的方法（ 类的性质可以放在第四部分；如果类中含有内部类，则会出现第五个组成部分）。类名部分是不能省略的，其他组成部分可以省略。类名书写规范：正体字说明类是可被实例化的，斜体字说明类为抽象类。
-> 属性和方法书写规范：修饰符 \[描述信息\] 属性、方法名称 \[参数\] \[：返回类型 \| 类型\]。
+
+- 类（Class）一般包含 3 个组成部分。第一个是类名；第二个是属性（attributes）；第三个是该类提供的方法（ 类的性质可以放在第四部分；如果类中含有内部类，则会出现第五个组成部分）。类名部分是不能省略的，其他组成部分可以省略。类名书写规范：正体字说明类是可被实例化的，斜体字说明类为抽象类。
+  > 属性和方法书写规范：修饰符 \[描述信息\] 属性、方法名称 \[参数\] \[：返回类型 \| 类型\]。
 
 属性和方法之前可附加的可见性修饰符：
->加号（+）表示public；减号（-）表示private；井号(#)表示protected；省略这些修饰符表示具有package（包）级别的可见性。
->如果属性或方法具有下划线，则说明它是静态的。描述信息使用 << 开头，使用 >> 结尾。类的性质是由一个属性、一个赋值方法和一个取值方法组成。书写方式和方法类似。
+
+> 加号（+）表示 public；减号（-）表示 private；井号(#)表示 protected；省略这些修饰符表示具有 package（包）级别的可见性。
+> 如果属性或方法具有下划线，则说明它是静态的。描述信息使用 << 开头，使用 >> 结尾。类的性质是由一个属性、一个赋值方法和一个取值方法组成。书写方式和方法类似。
 
 ### 包
-包（Package）是一种常规用途的组合机制。UML中的一个包直接对应于Java中的一个包。在Java中，一个包可能含有其他包、类或者同时含有这两者。进行建模时，通常使用逻辑性的包，用于对模型进行组织；使用物理性的包，用于转换成系统中的Java包。每个包的名称对这个包进行了惟一性的标识。
+
+包（Package）是一种常规用途的组合机制。UML 中的一个包直接对应于 Java 中的一个包。在 Java 中，一个包可能含有其他包、类或者同时含有这两者。进行建模时，通常使用逻辑性的包，用于对模型进行组织；使用物理性的包，用于转换成系统中的 Java 包。每个包的名称对这个包进行了惟一性的标识。
+
 ### 接口
-接口（Interface）是一系列操作的集合，它指定了一个类所提供的服务。它直接对应于Java中的一个接口类型。接口的表示有大概两种方式。具体画法见下例：
+
+接口（Interface）是一系列操作的集合，它指定了一个类所提供的服务。它直接对应于 Java 中的一个接口类型。接口的表示有大概两种方式。具体画法见下例：
+
 ### 关系
+
 常见的关系有：继承（Inheritance），关联关系（Association），聚合关系（Aggregation），复合关系（Composition），依赖关系（Dependency）,实现关系(Realization/Implementation)。
 其中，聚合关系（Aggregation），复合关系（Composition）属于关联关系（Association）。
 类图中的关系表示
 类图中的关系表示
-##### 一般关系
-表现为继承或实现关系(is a)，关联关系表现为变量(has a )，依赖关系表现为函数中的参数(use a)。
-##### 一般化关系：表示为类与类之间的继承关系，接口与接口之间的继承，类对接口的实现关系。
-表示方法： 用一个空心箭头+实线，箭头指向父类。或空心箭头+虚线，如果父类是接口。
-##### 关联关系：类与类之间的联接，它使一个类知道另一个类的属性和方法。
-表示方法：用 实线+箭头， 箭头指向被使用的类。
-##### 聚合关系：是关联关系的一种，是强的关联关系。聚合关系是整体和个体的关系。关联关系的两个类处于同一层次上，而聚合关系两个类处于不同的层次，一个是整体，一个是部分。
-表示方法：空心菱形+实线+箭头，箭头指向整体。
-##### 合成关系：是关联关系的一种，是比聚合关系强的关系。它要求普通的聚合关系中代表整体的对象负责代表部分的对象的生命周期，合成关系不能共享。
-表示方法：实心菱形+实线+箭头，
-##### 依赖关系：是类与类之间的连接，表示一个类依赖于另一个类的定义。例如如果A依赖于B，则B体现为局部变量，方法的参数、或静态方法的调用。
-表示方法：虚线+箭头 箭头指向被依赖的一方，也就是指向局部变量。
 
+##### 一般关系
+
+表现为继承或实现关系(is a)，关联关系表现为变量(has a )，依赖关系表现为函数中的参数(use a)。
+
+##### 一般化关系：表示为类与类之间的继承关系，接口与接口之间的继承，类对接口的实现关系。
+
+表示方法： 用一个空心箭头+实线，箭头指向父类。或空心箭头+虚线，如果父类是接口。
+
+##### 关联关系：类与类之间的联接，它使一个类知道另一个类的属性和方法。
+
+表示方法：用 实线+箭头， 箭头指向被使用的类。
+
+##### 聚合关系：是关联关系的一种，是强的关联关系。聚合关系是整体和个体的关系。关联关系的两个类处于同一层次上，而聚合关系两个类处于不同的层次，一个是整体，一个是部分。
+
+表示方法：空心菱形+实线+箭头，箭头指向整体。
+
+##### 合成关系：是关联关系的一种，是比聚合关系强的关系。它要求普通的聚合关系中代表整体的对象负责代表部分的对象的生命周期，合成关系不能共享。
+
+表示方法：实心菱形+实线+箭头，
+
+##### 依赖关系：是类与类之间的连接，表示一个类依赖于另一个类的定义。例如如果 A 依赖于 B，则 B 体现为局部变量，方法的参数、或静态方法的调用。
+
+表示方法：虚线+箭头 箭头指向被依赖的一方，也就是指向局部变量。
 
 作用
 （1）在软件工程中，类图是一种静态的结构图，描述了系统的类的集合，类的属性和类之间的关系，可以简化了人们对系统的理解；
