--- a/知识学习/其他/回调函数.md
+++ b/知识学习/其他/回调函数.md
@@ -1,13 +1,17 @@
-
 # 1.定义
+
 回调函数也是一种函数，但是它是作为参数传递给另一个调用函数进行执行，且该调用函数执行完毕后会执行回调函数
 
 # 2.使用场景
+
 事件处理、异步操作、数据处理和插件开发等
 
 # 3.实现方法
+
 函数指针、函数对象等方式
+
 ### 3.1 函数指针实现方式
+
 ```cpp
 // 示例语法
 返回类型 (*函数指针名称)(参数列表...)
@@ -20,7 +24,9 @@ int add(int a,int b)
 }
 callback = add;// 函数指针赋值
 ```
+
 ### 3.2 函数对象实现方式
+
 > 函数对象是类的实例，并重载函数调用运算符`()`，当把函数对象作为参数传递给其他函数时，其他函数就能使用该对象调用重载的函数调用运算符实现回调函数
 
 ```cpp
@@ -46,9 +52,10 @@ public:
 Add add;
 ```
 
-### 3.3 匿名函数/lambda表达式 实现方式
-> C++11后可以直接使用lambda表达式作为参数传递给其他函数或对象
-> Lambda表达式的语法为`[捕获列表](参数列表){lambda 函数体 }`，其中[]表示Lambda表达式的捕获列表，即可以在Lambda表达式中访问的外部变量；()表示Lambda参数列表，{}表示Lambda函数体，即Lambda表达式所要执行的代码块
+### 3.3 匿名函数/lambda 表达式 实现方式
+
+> C++11 后可以直接使用 lambda 表达式作为参数传递给其他函数或对象
+> Lambda 表达式的语法为`[捕获列表](参数列表){lambda 函数体 }`，其中[]表示 Lambda 表达式的捕获列表，即可以在 Lambda 表达式中访问的外部变量；()表示 Lambda 参数列表，{}表示 Lambda 函数体，即 Lambda 表达式所要执行的代码块
 
 ```cpp
 #include <iostream>
@@ -73,15 +80,19 @@ int main()
 ```
 
 # 4.优缺点
+
 ### 4.1 优点
-+ 提高代码的复用性和灵活性：回调函数可以将一个函数作为参数传递给另一个函数，从而实现模块化编程，提高代码的复用性和灵活性。
-- 解耦合：回调函数可以将不同模块之间的关系解耦，使得代码更易于维护和扩展。
-- 可以异步执行：回调函数可以在异步操作完成后被执行，这样避免了阻塞线程，提高应用程序的效率
+
+- 提高代码的复用性和灵活性：回调函数可以将一个函数作为参数传递给另一个函数，从而实现模块化编程，提高代码的复用性和灵活性。
+
+* 解耦合：回调函数可以将不同模块之间的关系解耦，使得代码更易于维护和扩展。
+* 可以异步执行：回调函数可以在异步操作完成后被执行，这样避免了阻塞线程，提高应用程序的效率
+
 ### 4.2 缺点
+
 - 回调函数嵌套过多会导致代码难以维护：如果回调函数嵌套层数过多，代码会变得非常复杂，难以维护。(回调函数嵌套层数过多-->`回调地狱`)
 - 回调函数容易造成竞态条件：如果回调函数中有共享资源访问，容易出现竞态条件，导致程序出错。
 - 代码可读性差：回调函数的使用可能会破坏代码的结构和可读性，尤其是在处理大量数据时
-
 
 参考：
 [回调函数(callback)是什么？一文理解回调函数(callback)](https://mp.weixin.qq.com/s/p71yXu4o8Px4J9uSgHdLFA)
