doc(知识学习,资料收藏等):添加,优化相关笔记
     1.优化相关笔记
     2.收藏相干的资料
     3.其他修改

--- a/知识学习/C&C++/构造函数与析构函数.md
+++ b/知识学习/C&C++/构造函数与析构函数.md
@@ -5,11 +5,12 @@
 - [C++中的五种构造函数-CSDN 博客](https://blog.csdn.net/TABE_/article/details/116714304)
 - [C++构造函数、析构函数与抛出异常 - hellogiser - 博客园](https://www.cnblogs.com/hellogiser/p/constructor-destructor-exceptions.html)
 - [C++学习之构造函数中的异常处理 - 神奕 - 博客园](https://www.cnblogs.com/songlee/p/5738092.html)
+- [C++类的八大默认函数：构造/析构/拷贝/赋值/移动全解析！](https://mp.weixin.qq.com/s/YVzvMS3oWhWgkriO-Ap65g)
 
 # 一、构造函数(Constructor)
 
 - 构造函数是特殊的非静态成员函数，用于初始化该类类型的对象
-- 构造函数中抛出异常是C++中通知对象构造失败的**唯一方法**
+- 构造函数中抛出异常是 C++中通知对象构造失败的**唯一方法**
 
 ```cpp
 class A
@@ -33,8 +34,8 @@ private:
 ```
 
 - 构造函数可以抛出异常，但抛出异常后该对象析构函数不会被执行 -> 该对象部分构造无法调用析构函数/抛出异常后程序执行控制权会被转移
-- (无论何时，从构造函数中抛出异常都是可以的)(new 运算符保证不会出现内存泄漏，有异常处理机制 -> 即使用new分配内存出错也不会造成内存泄漏)
-- 但是若构造函数中抛出异常导致new分配成功的内存未使用delete释放则会造成内存泄漏
+- (无论何时，从构造函数中抛出异常都是可以的)(new 运算符保证不会出现内存泄漏，有异常处理机制 -> 即使用 new 分配内存出错也不会造成内存泄漏)
+- 但是若构造函数中抛出异常导致 new 分配成功的内存未使用 delete 释放则会造成内存泄漏
 
 ### 1.1 默认构造函数
 
