--- a/知识学习/操作系统/Linux/常用命令/常用命令合集.md
+++ b/知识学习/操作系统/Linux/常用命令/常用命令合集.md
@@ -14,3 +14,24 @@ $ du -sh DIR_NAME
 $ tracepath 8.8.8.8
 $ traceroute 8.8.8.8
 ```
+
+# 文件/文件夹压缩
+
+[Linux 下几个常用的归档和压缩工具](https://mp.weixin.qq.com/s/MdRSpFRB2E9vO1yovFXzEg)
+
+```shell
+$ tar -czvf archive.tar.gz file1 file2 file3 # 归档和压缩
+$ tar -xzvf archive.tar.gz # 解压
+
+$ gzip file1 # 压缩
+$ gzip -d file1.gz # 解压
+
+$ bzip2 file1 # 压缩
+$ bzip2 -d file1.gz # 解压
+
+# 压缩
+$ zip archive.zip file1 file2 file3
+# 解压
+$ unzip archive.zip # 解压到当前目录
+$ unzip archive.zip -d /path/to/directory # 解压到特定目录
+```
