--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -13,6 +13,7 @@
 
 [五分钟扫盲：进程与线程基础必知 - 知乎](https://zhuanlan.zhihu.com/p/403313422)
 [Linux 原来这样完成了多任务切换](https://mp.weixin.qq.com/s/p9w8CDSABmUO-UV0oi9BIw)
+[多进程编程知识汇总（附代码例子）](https://mp.weixin.qq.com/s/yJwXorK6VH1QQSNejZzODg)
 
 # 一、进程
 
@@ -311,6 +312,8 @@ $ kill -9 <ppid>
 # 三、进程间通信方式及其优缺点
 
 [全网最全、最详细的 Linux 进程间通信方式讲解来了，你不容错过！](https://mp.weixin.qq.com/s/-HapLBJIrV6BULzpaqVw4w)
+
+![](https://mmbiz.qpic.cn/sz_mmbiz_png/PnO7BjBKUzibyXf6yjDjYVpicewX5MTNYqLjwc8WXPZIhh5hQiaP9PPhDLM1MOaIIpHGH3sQm2WibJeTD57MOyAXEQ/640?wx_fmt=png)
 
 ### 3.1 管道(PIPE)--> 半双工通信
 
