--- a/资料收藏/优秀文章合集.md
+++ b/资料收藏/优秀文章合集.md
@@ -2,15 +2,20 @@
 
 [printf 打印输出时 \ n 和 \r 的区别](https://mp.weixin.qq.com/s/jJAwt3ivZ8DbfwEuFt7G0w)
 
-# C 语言相关
+# C/C++ 语言相关
 
 [50 条 C 语言奇技淫巧，精品干货！](https://mp.weixin.qq.com/s/BMQfsrmVMBHg4lhApuwuVA)
-
 [C 程序中 10 个与内存有关的常见错误](https://mp.weixin.qq.com/s/T7lRbx0KVcywlHBa1HwtEw)
+[一名优秀的 C++开发是怎么炼成的](https://mp.weixin.qq.com/s/LjeRXwRv8CS2kwKjE-QZ0Q)
 
 # Linux 系统相关
 
 [如何诊断一个耗资源的神秘进程？](https://mp.weixin.qq.com/s/0Nn5Yw2tzrSvbM_m_DOqmQ)
+[详解 Linux 内核模块的加载机制](https://mp.weixin.qq.com/s/dlmQt-bIZi3iZDcizOrCXg)
+
+# 嵌入式
+
+[盘点我经常使用的嵌入式开发工具](https://mp.weixin.qq.com/s/zMNJo4D2pHpt5CFo-Gxyeg)
 
 # VIM 相关
 
@@ -30,11 +35,15 @@
 
 [计算机教育中缺失的一课 · the missing semester of your cs education](https://missing-semester-cn.github.io/)
 [浮点数精度问题全解析](https://mp.weixin.qq.com/s/H8riVioz1IA8e-zbyP2fxQ)
+[嵌入式软件开发，编程规范很重要](https://mp.weixin.qq.com/s/FWTWqIxmtvPC1D3MsOBMDw)
+[写出漂亮规范的代码！分享一份嵌入式 C 编码规范（收藏细读）](https://mp.weixin.qq.com/s/4jjZ7vbpGphE6lxR9OAwPQ)
 
 # 计算机协议
 
 [一口气整清楚 TTL、RS232、RS422、RS485、CAN、USB、SD 卡、1-WIRE、Ethernet.....](https://mp.weixin.qq.com/s/nPGsJHBTK8EP4UjjlIjVnA)
 [电脑 USB、HDMI、DP 速度区别](https://mp.weixin.qq.com/s/MesDGomn_ywXNddn3DmoPw)
+[FAT32 文件系统实现原理](https://mp.weixin.qq.com/s/q05U8Ca2V0ayL30nB8Q_JA)
+[文件系统(五)：exFAT 文件系统原理详解](https://mp.weixin.qq.com/s/JtZxJTgp9j7786HFzN4esg)
 
 # 其他
 
