doc(知识学习,阅读笔记等):添加,优化相关笔记
1.继续完善以前写的笔记
2.整理归纳一些笔记
3.其他修改

--- a/知识学习/操作系统/进程与线程.md
+++ b/知识学习/操作系统/进程与线程.md
@@ -14,6 +14,7 @@
 [五分钟扫盲：进程与线程基础必知 - 知乎](https://zhuanlan.zhihu.com/p/403313422)
 [Linux 原来这样完成了多任务切换](https://mp.weixin.qq.com/s/p9w8CDSABmUO-UV0oi9BIw)
 [多进程编程知识汇总（附代码例子）](https://mp.weixin.qq.com/s/yJwXorK6VH1QQSNejZzODg)
+[进程控制 \| 爱编程的大丙](https://subingwen.cn/linux/process/)
 
 # 一、进程
 
@@ -28,6 +29,20 @@
 ### 1.2 进程组成
 
 ##### 1.2.1 进程控制块(PCB) -> 操作系统使用
+
+- 进程 id：每一个进程都一个唯一的进程 ID，类型为 pid_t, 本质是一个整形数
+- 进程的状态：进程有不同的状态, 状态是一直在变化的，有就绪、运行、挂起、停止等状态
+- 进程对应的虚拟地址空间的信息
+- 描述控制终端的信息，进程在哪个终端启动默认就和哪个终端绑定
+- 当前工作目录：默认情况下, 启动进程的目录就是当前的工作目录
+- umask 掩码：在创建新文件的时候，通过这个掩码屏蔽某些用于对文件的操作权限
+- 文件描述符表：每个被分配的文件描述符都对应一个已经打开的磁盘文件
+- 和信号相关的信息：在 Linux 中 调用函数, 键盘快捷键, 执行 shell 命令等操作都会产生信号
+- 阻塞信号集：记录当前进程中阻塞哪些已产生的信号，使其不能被处理
+- 未决信号集：记录在当前进程中产生的哪些信号还没有被处理掉
+- 用户 id 和组 id：当前进程属于哪个用户, 属于哪个用户组
+- 会话（Session）和进程组：多个进程的集合叫进程组，多个进程组的集合叫会话
+- 进程可以使用的资源上限：可以使用 shell 命令 `ulimit -a` 查看详细信息
 
 ##### 1.2.2 数据段 -> 进程使用
 
@@ -52,9 +67,9 @@
 title: 三状态转换图
 ---
 graph
-A[就绪] -- 进程调度 --> B[执行]
+A[**就绪**] -- 进程调度 --> B[**执行**]
 B -- CPU时间片用完 --> A
-B -- 等待事件完成 --> C[阻塞]
+B -- 等待事件完成 --> C[**阻塞**]
 C -- 事件已完成 --> A
 ```
 
@@ -63,12 +78,12 @@ C -- 事件已完成 --> A
 title: 五状态转换图
 ---
 graph
-A[就绪] -- 进程调度 --> B[执行]
+A[**就绪**] -- 进程调度 --> B[**执行**]
 B -- CPU时间片用完 --> A
-B -- 等待事件完成 --> C[阻塞]
+B -- 等待事件完成 --> C[**阻塞**]
 C -- 事件已完成 --> A
-B -- 释放 --> D[终止]
-E[创建] --> A
+B -- 释放 --> D[**终止**]
+E[**创建**] --> A
 ```
 
 ##### 1.3.1 就绪态(ready)
@@ -103,6 +118,12 @@ Linux 系统进程的标准内存端布局：
 不管是内核空间还是用户空间，它们都处于虚拟空间中。 虽然内核空间占据了每个虚拟空间中的最高 1GB 字节，但映射到物理内存却总是从最低地址（0x00000000），另外， 使用虚拟地址可以很好的保护内核空间被用户空间破坏，虚拟地址到物理地址转换过程由操作系统和 CPU 共同完成(操作系统为 CPU 设置好页表，CPU 通过 MMU 单元进行地址转换)
 
 [操作系统 -- 虚拟地址与物理地址 - 牛犁 heart - 博客园](https://www.cnblogs.com/whiteBear/p/16299264.html)
+
+每个进程最大能打开的文件数默认为 1024 个，标准输入、标准输出和错误输出的文件描述符为 0,1,2，后续打开的文件从 3 开始分配
+
+同一进程中每打开一个文件，就会给这个文件分配一个新的文件描述符(即使打开的是同一个文件)
+
+[文件描述符 \| 爱编程的大丙](https://subingwen.cn/linux/file-descriptor/)
 
 ##### 1.4.1 虚拟地址
 
@@ -195,6 +216,8 @@ C)  挂起的信号。这些信号是所谓的“悬而未决”的信号，等
 
 当父进程因为某些原因没有等待创建的子进程退出就提前结束，此时的子进程就是孤儿进程，此时孤儿进程的父进程会变为 init 进程
 
+如果 Linux 没有桌面终端，由 init 进程（PID=1）领养孤儿进程，如果有桌面终端，则由桌面进程领养(实际测试不一定由桌面进程领养，也可能是 init 进程)
+
 ##### 1.7.2 僵尸进程(占用进程号，危害性较大)
 
 当子进程退出时，父进程没有调用 wait()或 waitpid()获取子进程状态信息，导致子进程的进程描述符等信息仍然存在于系统中，此时的子进程就是僵尸进程，直到父进程处理或者父进程被终止时才会消失；若父进程是死循环，那么该僵尸进程就会一直消耗内存空间和进程号
@@ -217,6 +240,7 @@ $ kill -9 <ppid>
 ##### 1.7.3 守护进程
 
 [【Linux】守护进程（ Daemon）的定义，作用，创建流程](https://blog.csdn.net/JMW1407/article/details/108412836)
+[守护进程 \| 爱编程的大丙](https://subingwen.cn/linux/deamon/)
 
 脱离终端在后台运行的程序，通常以 d 结尾，随系统启动而启动，父进程通常为 init 进程，可按照下面描述方法创建守护进程，也可通过库函数 daemon()创建守护进程
 
@@ -227,13 +251,80 @@ $ kill -9 <ppid>
   >
   > 3.从子进程再次调用 fork()创建一个子进程(孙子进程)并结束掉原本的子进程，使得该孙子进程真正成为孤儿进程(守护进程)-> 有可能原本的父进程创建出子进程后因为某种原因阻塞，而子进程提前退出导致成为僵尸进程而非孤儿进程；而子进程再次创建孙子进程后立即退出，这时候可以保证孙子进程是孤儿进程而非僵尸进程
   >
-  > 4.在孙子进程中调用 chdir()使根目录`/`成为该进程的工作目录
+  > 4.在孙子进程中调用 chdir()使根目录`/`成为该进程的工作目录(可选)
   >
-  > 5.在孙子进程中调用 umask()设置进程文件权限掩码为 0
+  > 5.在孙子进程中调用 umask()设置进程文件权限掩码为 0(可选)
   >
   > 6.在孙子进程中关闭任何不需要的文件描述符，例如文件描述符为 0,1,2 的三个文件(标准输入、标准输出和标准错误输出)
   >
   > 7.处理守护进程的退出操作：编写代码实现 kill 发出的 signal 信号处理，实现该进程的正常退出
+
+```c
+//得到当前进程所在的进程组的组ID
+pid_t getpgrp(void);
+//获取指定的进程所在的进程组的组ID，参数 pid 就是指定的进程
+pid_t getpgid(pid_t pid);
+//将某个进程移动到其他进程组中或者创建新的进程组
+int setpgid(pid_t pid, pid_t pgid);
+
+#include <unistd.h>
+
+// 获取某个进程所属的会话ID
+pid_t getsid(pid_t pid);
+// 将某个进程变成会话 =>> 得到一个守护进程
+// 使用哪个进程调用这个函数, 这个进程就会变成一个会话
+pid_t setsid(void);
+```
+
+### 1.8 进程创建函数
+
+```c
+#include <sys/types.h>
+#include <unistd.h>
+
+// 获取当前进程的进程ID
+pid_t getpid(void);
+// 获取当前进程的父进程ID
+pid_t getppid(void);
+// 创建一个新的进程
+pid_t fork(void);
+
+// 通过一个进程启动另一个进程 启动成功后该进程被其他进程替代
+int execl(const char *path, const char *arg, ...
+          /* (char  *) NULL */);
+int execlp(const char *file, const char *arg, ...
+           /* (char  *) NULL */);
+int execle(const char *path, const char *arg, ...
+           /*, (char *) NULL, char * const envp[] */);
+int execv(const char *path, char *const argv[]);
+int execvp(const char *file, char *const argv[]);
+int execvpe(const char *file, char *const argv[],
+            char *const envp[]);
+
+// 结束进程函数
+// 标准C库函数
+#include <stdlib.h>
+void exit(int status);
+
+// Linux的系统函数
+// 可以这么理解, 在linux中 exit() 函数 封装了 _exit()
+#include <unistd.h>
+void _exit(int status);
+
+// 进程回收
+// man 2 wait
+#include <sys/wait.h>
+// 阻塞进程
+pid_t wait(int *status);
+
+// 这个函数可以设置阻塞, 也可以设置为非阻塞
+// 这个函数可以指定回收哪些子进程的资源
+pid_t waitpid(pid_t pid, int *status, int options);
+```
+
+exec 族函数中最常用的有两个`execl()`和`execlp()`
+
+一般在调用这些函数的时候都会先创建一个子进程，在子进程中调用 exec 族函数，子进程的用户区数据被替换掉开始执行新的程序中的代码逻辑，但是父进程不受任何影响仍然可以继续正常工作
 
 ### 中断上下文
 
@@ -312,10 +403,44 @@ $ kill -9 <ppid>
 # 三、进程间通信方式及其优缺点
 
 [全网最全、最详细的 Linux 进程间通信方式讲解来了，你不容错过！](https://mp.weixin.qq.com/s/-HapLBJIrV6BULzpaqVw4w)
+[内存映射(mmap) \| 爱编程的大丙](https://subingwen.cn/linux/mmap/)
 
 ![](https://mmbiz.qpic.cn/sz_mmbiz_png/PnO7BjBKUzibyXf6yjDjYVpicewX5MTNYqLjwc8WXPZIhh5hQiaP9PPhDLM1MOaIIpHGH3sQm2WibJeTD57MOyAXEQ/640?wx_fmt=png)
 
+管道对应的内存空间在内核中，而内存映射区对应的内存空间在进程的用户区（用于加载动态库的那个区域）即进程间通信使用的内存映射区不是一块，而是在每个进程内部都有一块(==内存映射区与共享内存不同==)
+![](https://subingwen.cn/linux/mmap/image-20210205145238501.png)
+
+```c
+#include <sys/mman.h>
+// 创建内存映射区
+1. 第一个参数 addr 指定为 NULL 即可
+2. 第二个参数 length 必须要 > 0
+3. 第三个参数 prot，进程间通信需要对内存映射区有读写权限，因此需要指定为：PROT_READ | PROT_WRITE
+4. 第四个参数 flags，如果要进行进程间通信, 需要指定 MAP_SHARED
+5. 第五个参数 fd，打开的文件必须大于0，进程间通信需要文件操作权限和映射区操作权限相同
+     - 内存映射区创建成功之后, 关闭这个文件描述符不会影响进程间通信
+6. 第六个参数 offset，不偏移指定为0，如果偏移必须是4k的整数倍
+void *mmap(void *addr, size_t length, int prot, int flags, int fd, off_t offset);
+
+// 释放内存映射区
+int munmap(void *addr, size_t length);
+```
+
+- 有血缘关系的进程：创建子进程会发生虚拟地址空间的复制，那么在父进程中创建的内存映射区也会被复制到子进程中，这样在子进程里边就可以直接使用这块内存映射区了，所以对于有血缘关系的进程，进行进程间通信是非常简单的
+- 没有血缘关系的进程：需要在每个进程中分别创建内存映射区，但是这些进程的内存映射区必须要关联相同的磁盘文件，这样才能实现进程间的数据同步
+
+使用内存映射区拷贝文件思路：
+
+- 打开被拷贝文件，得到文件描述符 fd1，并计算出这个文件的大小 size
+- 创建内存映射区 A 并且和被拷贝文件关联，也就是和 fd1 关联起来，得到映射区地址 ptrA
+- 创建新文件，得到文件描述符 fd2，用于存储被拷贝的数据，并且将这个文件大小拓展为 size
+- 创建内存映射区 B 并且和新创建的文件关联，也就是和 fd2 关联起来，得到映射区地址 ptrB
+- 进程地址空间之间的数据拷贝，memcpy（ptrB， ptrA，size），数据自动同步到新建文件中
+- 关闭内存映射区
+
 ### 3.1 管道(PIPE)--> 半双工通信
+
+管道的两端默认是阻塞的，可以通过 fcntl 修改为非阻塞的读写
 
 ##### 命名管道
 
@@ -324,12 +449,74 @@ $ kill -9 <ppid>
   - 长期存在，使用不当容易出错
   - 缓冲区有限
 
+```c
+#include <sys/types.h>
+#include <sys/stat.h>
+// 创建命名管道
+// int open(const char *pathname, int flags, mode_t mode);
+int mkfifo(const char *pathname, mode_t mode);
+
+// 读管道
+ssize_t read(int fd, void *buf, size_t count);
+// 写管道的函数
+ssize_t write(int fd, const void *buf, size_t count);
+```
+
+```c
+// 写管道进程的步骤
+/*
+	1. 创建有名管道文件
+		mkfifo()
+	2. 打开有名管道文件, 打开方式是 o_wronly
+		int wfd = open("xx", O_WRONLY);
+	3. 调用write函数写文件 ==> 数据被写入管道中
+		write(wfd, data, strlen(data));
+	4. 写完之后关闭文件描述符
+		close(wfd);
+*/
+
+// 读管道进程的步骤
+/*
+	1. 这两个进程需要操作相同的管道文件
+	2. 打开有名管道文件, 打开方式是 o_rdonly
+		int rfd = open("xx", O_RDONLY);
+	3. 调用read函数读文件 ==> 读管道中的数据
+		char buf[4096];
+		read(rfd, buf, sizeof(buf));
+	4. 读完之后关闭文件描述符
+		close(rfd);
+*/
+```
+
 ##### 匿名管道
 
 - 优点：简单方便
 - 缺点
   - 只能在具有亲缘关系的进程间通信
   - 缓冲区有限
+
+```c
+#include <unistd.h>
+// 创建一个匿名的管道, 得到两个可用的文件描述符
+int pipe(int pipefd[2]);
+```
+
+将默认输出到终端的数据写入到管道就需要进行输出的重定向，需要使用 dup2()做这件事情：`dup2(fd[1], STDOUT_FILENO);`
+
+##### 管道的读写行为
+
+- 读管道，需要根据写端的状态进行分析：
+  - 写端没有关闭 (操作管道写端的文件描述符没有被关闭)
+    - 如果管道中没有数据 ==> 读阻塞, 如果管道中被写入了数据, 阻塞解除
+    - 如果管道中有数据 ==> 不阻塞，管道中的数据被读完了, 再继续读管道还会阻塞
+  - 写端已经关闭了 (没有可用的文件描述符可以写管道了)
+    - 管道中没有数据 ==> 读端解除阻塞, read 函数返回 0
+    - 管道中有数据 ==> read 先将数据读出, 数据读完之后返回 0, 不会阻塞了
+- 写管道，需要根据读端的状态进行分析：
+  - 读端没有关闭
+    - 如果管道有存储的空间, 一直写数据
+    - 如果管道写满了, 写操作就阻塞, 当读端将管道数据读走了, 解除阻塞继续写
+  - 读端关闭了，管道破裂(异常), 进程直接退出
 
 ### 3.2 信号量(Semaphore)
 
@@ -341,6 +528,57 @@ $ kill -9 <ppid>
 ### 3.3 信号(Signal)
 
 > 较为复杂的通信方式，通知进程某个事件已经发生
+
+[信号 \| 爱编程的大丙](https://subingwen.cn/linux/signal/)
+
+```bash
+# 执行shell命令查看信号
+$ kill -l
+ 1) SIGHUP       2) SIGINT       3) SIGQUIT      4) SIGILL       5) SIGTRAP
+ 2) SIGABRT      7) SIGBUS       8) SIGFPE       9) SIGKILL     10) SIGUSR1
+3) IGSEGV     12) SIGUSR2     13) SIGPIPE     14) SIGALRM     15) SIGTERM
+4) IGSTKFLT   17) SIGCHLD     18) SIGCONT     19) SIGSTOP     20) SIGTSTP
+5) IGTTIN     22) SIGTTOU     23) SIGURG      24) SIGXCPU     25) SIGXFSZ
+6) IGVTALRM   27) SIGPROF     28) SIGWINCH    29) SIGIO       30) SIGPWR
+7) IGSYS      34) SIGRTMIN    35) SIGRTMIN+1  36) SIGRTMIN+2  37) SIGRTMIN+3
+8) IGRTMIN+4  39) SIGRTMIN+5  40) SIGRTMIN+6  41) SIGRTMIN+7  42) SIGRTMIN+8
+9) IGRTMIN+9  44) SIGRTMIN+10 45) SIGRTMIN+11 46) SIGRTMIN+12 47) SIGRTMIN+13
+10) IGRTMIN+14 49) SIGRTMIN+15 50) SIGRTMAX-14 51) SIGRTMAX-13 52) SIGRTMAX-12
+11) IGRTMAX-11 54) SIGRTMAX-10 55) SIGRTMAX-9  56) SIGRTMAX-8  57) SIGRTMAX-7
+12) IGRTMAX-6  59) SIGRTMAX-5  60) SIGRTMAX-4  61) SIGRTMAX-3  62) SIGRTMAX-2
+13) IGRTMAX-1  64) SIGRTMAX
+```
+
+Linux 中的信号有三种状态，分别为：产生，未决，递达。
+
+- 产生：键盘输入, 函数调用, 执行 shell 命令, 对硬件进行非法访问等操作都会产生信号
+- 未决：信号产生了, 但是这个信号还没有被处理掉, 这个期间信号的状态称之为未决状态
+- 递达：信号被处理了(被某个进程处理掉)
+
+当子进程退出、暂停、从暂停回复运行的时候，在子进程中会产生一个 SIGCHLD 信号，并将其发送给父进程，但是父进程收到这个信号之后默认就忽略了。我们可以在父进程中对这个信号加以利用，基于这个信号来回收子进程的资源
+
+```c
+#include <signal.h>
+// 给某一个进程发送一个信号
+int kill(pid_t pid, int sig);
+// 参数就是要给当前进程发送的信号
+int raise(int sig);
+
+// 中断函数, 发送一个固定信号 (SIGABRT)杀死当前进程
+#include <stdlib.h>
+void abort(void);
+
+#include <unistd.h>
+// 倒计时seconds秒, 倒计时完成发送信号 SIGALRM , 当前进程会收到这个信号，这个信号默认的处理动作是中断当前进程
+unsigned int alarm(unsigned int seconds);
+
+#include <signal.h>
+// 在信号产生之前, 提供一个注册函数, 用来捕捉信号
+//	  - 假设在将来这个信号产生了, 就委托内核进行捕捉, 这个信号的默认动作就不能被执行
+//	  - 执行什么样的处理动作 ==> 在signal函数中指定的处理动作
+//	  - 如果这个信号不产生, 回调函数永远不会被调用
+sighandler_t signal(int signum, sighandler_t handler);
+```
 
 ### 3.4 消息队列(Message Queue)
 
@@ -357,6 +595,61 @@ $ kill -9 <ppid>
 - 缺点
   - 通信是通过将共享空间缓冲区直接附加到进程的虚拟地址空间中来实现的，需要考虑进程间的读写同步问题
   - 利用内存缓冲区直接交换信息，只能同一个计算机系统中的诸多进程共享，不方便网络通信
+
+[共享内存 \| 爱编程的大丙](https://subingwen.cn/linux/shm/)
+
+```c
+#include <sys/ipc.h>
+#include <sys/shm.h>
+// 创建/打开共享内存
+int shmget(key_t key, size_t size, int shmflg);
+
+// ftok函数原型 用于shmget()的key
+#include <sys/types.h>
+#include <sys/ipc.h>
+// 将两个参数作为种子, 生成一个 key_t 类型的数值
+key_t ftok(const char *pathname, int proj_id);
+
+// 关联和解除关联共享内存
+void *shmat(int shmid, const void *shmaddr, int shmflg);
+int shmdt(const void *shmaddr);
+
+// 共享内存控制函数
+int shmctl(int shmid, int cmd, struct shmid_ds *buf);
+```
+
+shmctl() 函数是一个多功能函数，可以设置、获取共享内存的状态也可以将共享内存标记为删除状态。当共享内存被标记为删除状态之后，并不会马上被删除，直到所有的进程全部和共享内存解除关联，共享内存才会被删除
+
+使用共享内存实现进程间通信操作流程：
+
+1. 调用 linux 的系统 API 创建一块共享内存
+   - 这块内存不属于任何进程, 默认进程不能对其进行操作
+2. 准备好进程 A, 和进程 B, 这两个进程需要和创建的共享内存进行关联
+   - 关联操作: 调用 linux 的 api
+   - 关联成功之后, 得到了这块共享内存的起始地址
+3. 在进程 A 或者进程 B 中对共享内存进行读写操作
+   - 读内存: printf() 等;
+   - 写内存: memcpy() 等;
+4. 通信完成, 可以让进程 A 和 B 和共享内存解除关联
+   - 解除成功, 进程 A 和 B 不能再操作共享内存了
+   - 共享内存不受进程生命周期的影响的
+5. 共享内存不在使用之后, 将其删除
+   - 调用 linux 的 api 函数, 删除之后这块内存被内核回收了
+
+共享内存和内存映射区都可以实现进程间通信，二者的区别：
+
+- 实现进程间通信的方式
+  - shm: 多个进程只需要一块共享内存就够了，共享内存不属于进程，需要和进程关联才能使用
+  - 内存映射区: 位于每个进程的虚拟地址空间中, 并且需要关联同一个磁盘文件才能实现进程间数据通信
+- 效率
+  - shm: 直接对内存操作，效率高
+  - 内存映射区: 需要内存和文件之间的数据同步，效率低
+- 生命周期
+  - 内存映射区：进程退出, 内存映射区也就没有了
+  - shm：进程退出对共享内存没有影响，调用相关函数/命令/ 关机才能删除共享内存
+- 数据的完整性 -> 突发状态下数据能不能被保存下来（比如: 突然断电）
+  - 内存映射区：可以完整的保存数据, 内存映射区数据会同步到磁盘文件
+  - shm：数据存储在物理内存中, 断电之后系统关闭, 内存数据也就丢失了
 
 ### 3.6 套接字(Socket)
 
@@ -419,6 +712,8 @@ $ kill -9 <ppid>
 
 # 六、Linux 内核同步方式
 
+[详解 Linux 最高效进程通信-共享内存的同步问题](https://mp.weixin.qq.com/s/tVEOK8mKn5BvEN1Wgu-J6w)
+
 > 在现代操作系统里，同一时间可能有多个内核执行流在执行，因此内核其实像多进程多线程编程一样也需要一些同步机制来同步各执行单元对共享数据的访问。尤其是在多处理器系统上，更需要一些同步机制来同步不同处理器上的执行单元对共享的数据的访问
 
 ### 6.1 同步方式
@@ -432,6 +727,11 @@ $ kill -9 <ppid>
 - 大读者锁（brlock-Big Reader Lock）
 - 读-拷贝修改(RCU，Read-Copy Update)
 - 顺序锁（seqlock）
+
+System V 信号量(经典但较古老)：通过`semop`控制信号量值(P/V 操作)
+POSIX 信号量(推荐)：支持命名信号量(无关进程可访问)，`sem_wait`和`sem_post`
+共享内存中的互斥锁(高效但需谨慎)：将互斥锁直接放在共享内存中，`pthread_mutex_lock`与`pthread_mutex_unlock`
+文件锁(fcntl，冷门但灵活)：可锁整个文件或部分区域
 
 ### 6.2 死锁
 
