--- a/笔面试总结/2024.8.11 大疆笔试.md
+++ b/笔面试总结/2024.8.11 大疆笔试.md
@@ -43,7 +43,7 @@
 
 ### 1.6 Git 中，用于撤销之前的提交并保留更改的命令是`git revert`
 
-见[二、git reset/revert](../知识学习/软件应用/git%20命令.md#二、git%20reset/revert)
+见[二、git reset/revert](../知识学习/软件应用/Git/git%20命令.md#二、git%20reset/revert)
 
 ### 1.7 组相联映象、 LRU 替换的 Cache 存储器，不影响 Cache 命中率的是增加主存容量
 
