--- a/笔面试总结/面试总结/2024.8.14 经纬恒润面试 一面.md
+++ b/笔面试总结/面试总结/2024.8.14 经纬恒润面试 一面.md
@@ -20,7 +20,7 @@
 
 # 五、Makefile 编写规则
 
-见[Makefile基础知识](../../知识学习/软件应用/Makefile基础知识.md)
+见[Makefile基础知识](../../知识学习/操作系统/Makefile基础知识.md)
 
 # 六、TCP 和 UDP 协议各自优缺点
 
