--- a/知识学习/操作系统/编译与链接.md
+++ b/知识学习/操作系统/编译与链接.md
@@ -28,3 +28,40 @@
 | .rodata section         | 只读数据段，存放只读数据，一般是程序里面的只读变量（如 const 修饰的变量）和字符串常量                                 |
 | .comment section        | 注释信息段，存放编译器版本信息                                                                                        |
 | .note.GNU-stack section | 堆栈提示段                                                                                                            |
+
+# 四、gcc 编译参数
+
+[GCC \| 爱编程的大丙](https://subingwen.cn/linux/gcc/)
+
+|               gcc 编译选项               | 选项的意义                                                                                       |
+| :--------------------------------------: | :----------------------------------------------------------------------------------------------- |
+|                    -E                    | 预处理指定的源文件，不进行编译                                                                   |
+|                    -S                    | 编译指定的源文件，但是不进行汇编                                                                 |
+|                    -c                    | 编译、汇编指定的源文件，但是不进行链接                                                           |
+| -o [file1] [file2] 或 [file2] -o [file1] | 将文件 file2 编译成文件 file1                                                                    |
+|         -I directory (大写的 i)          | 指定 include 包含文件的搜索目录                                                                  |
+|                    -g                    | 在编译的时候，生成调试信息，该程序可以被调试器调试                                               |
+|                    -D                    | 在程序编译的时候，指定一个宏                                                                     |
+|                    -w                    | 不生成任何警告信息, 不建议使用, 有些时候警告就是错误                                             |
+|                  -Wall                   | 生成所有警告信息                                                                                 |
+|                   -On                    | n 的取值范围：0~3。编译器的优化选项的 4 个级别，-O0 表示没有优化，-O1 为缺省值，-O3 优化级别最高 |
+|                    -l                    | 在程序编译的时候，指定使用的库                                                                   |
+|                    -L                    | 指定编译的时候，搜索的库的路径。                                                                 |
+|                -fPIC/fpic                | 生成与位置无关的代码                                                                             |
+|                 -shared                  | 生成共享目标文件。通常用在建立共享库时                                                           |
+|                   -std                   | 指定 C 方言，如:-std=c99，gcc 默认的方言是 GNU C                                                 |
+
+示例如下：
+
+```bash
+# 在编译的时候重新指定头文件位置 -I 头文件目录
+$ gcc *.c -o test -I ./include
+# 指定一个宏DEBUG
+$ gcc test.c -o test -D DEBUG
+```
+
+gcc 与 g++区别：
+
+- 不管是 gcc 还是 g++ 都可以编译 C 程序，编译程序的规则和参数都相同
+- g++可以直接编译 C++程序， gcc 编译 C++程序需要添加额外参数 -lstdc++
+- 不管是 gcc 还是 g++ 都可以定义 \_\_cplusplus 宏
